# tauri-custum-plugin-fs

./: Cargo.toml  LICENSE.txt  README.md
src/: commands.rs  error.rs  lib.rs
src/commands/: basic.rs  entry.rs  read.rs
