[package]
name = "tauri-custom-plugin-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
filetime = "0.2.21"
serde = { version = "1.0.160", features = ["derive"] }
tauri = "1.2.4"
thiserror = "1.0.40"
